--- a/docs/source/ref.bib
+++ b/docs/source/ref.bib
@@ -26,3 +26,17 @@ Cambridge Philosophical Society}, author={Altmann, S. L.}, year={1957}, pages={3
   url = {https://link.aps.org/doi/10.1103/RevModPhys.35.641}
 }
 
+@book{ezra,
+  title = {Symmetry {{Properties}} of {{Molecules}}},
+  author = {Ezra, G. S.},
+  editor = {Berthier, G. and Dewar, M. J. S. and Fischer, H. and Fukui, K. and Hall, G. G. and Hartmann, H. and Jaff{\'e}, H. H. and Jortner, J. and Kutzelnigg, W. and Ruedenberg, K. and Scrocco, E.},
+  year = {1982},
+  series = {Lecture {{Notes}} in {{Chemistry}}},
+  volume = {28},
+  publisher = {Springer Berlin Heidelberg},
+  address = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-93197-0},
+  urldate = {2024-07-05},
+  copyright = {http://www.springer.com/tdm},
+  isbn = {978-3-540-11184-9 978-3-642-93197-0}
+}
