add drago citation for sn

--- a/docs/source/ref.bib
+++ b/docs/source/ref.bib
@@ -40,3 +40,14 @@ Cambridge Philosophical Society}, author={Altmann, S. L.}, year={1957}, pages={3
   copyright = {http://www.springer.com/tdm},
   isbn = {978-3-540-11184-9 978-3-642-93197-0}
 }
+
+@book{drago1992,
+  title={Physical Methods for Chemists},
+  author={Drago, Russell S.},
+  year={1992},
+  publisher={Saunders College Publishing},
+  address={Orlando, Florida},
+  edition={2nd},
+  isbn={9780030751769},
+  pages={750}
+}
