add missing text for theory

--- a/docs/source/ref.bib
+++ b/docs/source/ref.bib
@@ -51,3 +51,66 @@ Cambridge Philosophical Society}, author={Altmann, S. L.}, year={1957}, pages={3
   isbn={9780030751769},
   pages={750}
 }
+
+
+@article{bhattacharyya_measure_1943,
+	title = {On the {Measure} of {Divergence} {Between} {Two} {Statistical} {Populations} {Defined} by {Their} {Probability} {Distributions}},
+	volume = {35},
+	url = {http://archive.org/details/dli.calcutta.11603},
+	urldate = {2024-11-13},
+	journal = {Bulletin of the Calcutta Mathematical Society},
+	author = {Bhattacharyya, A.},
+	year = {1943},
+	keywords = {Departmental Journals},
+	pages = {99--110},
+}
+
+@article{bhattacharyya_measure_1946,
+	title = {On a {Measure} of {Divergence} between {Two} {Multinomial} {Populations}},
+	volume = {7},
+	issn = {0036-4452},
+	url = {https://www.jstor.org/stable/25047882},
+	number = {4},
+	urldate = {2024-11-13},
+	journal = {Sankhyā: The Indian Journal of Statistics (1933-1960)},
+	author = {Bhattacharyya, A.},
+	year = {1946},
+	note = {Publisher: Springer},
+	pages = {401--406},
+}
+
+@article{kashyap_perfect_2019,
+	title = {The perfect marriage and much more: {Combining} dimension reduction, distance measures and covariance},
+	volume = {536},
+	issn = {03784371},
+	shorttitle = {The perfect marriage and much more},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0378437119305631},
+	doi = {10.1016/j.physa.2019.04.174},
+	language = {en},
+	urldate = {2024-11-13},
+	journal = {Physica A: Statistical Mechanics and its Applications},
+	author = {Kashyap, Ravi},
+	month = dec,
+	year = {2019},
+	pages = {120938},
+}
+
+
+@article{virtanen_scipy_2020,
+	title = {{SciPy} 1.0: fundamental algorithms for scientific computing in {Python}},
+	volume = {17},
+	issn = {1548-7091, 1548-7105},
+	shorttitle = {{SciPy} 1.0},
+	url = {https://www.nature.com/articles/s41592-019-0686-2},
+	doi = {10.1038/s41592-019-0686-2},
+	abstract = {Abstract
+            SciPy is an open-source scientific computing library for the Python programming language. Since its initial release in 2001, SciPy has become a de facto standard for leveraging scientific algorithms in Python, with over 600 unique code contributors, thousands of dependent packages, over 100,000 dependent repositories and millions of downloads per year. In this work, we provide an overview of the capabilities and development practices of SciPy 1.0 and highlight some recent technical developments.},
+	language = {en},
+	number = {3},
+	urldate = {2024-11-18},
+	journal = {Nature Methods},
+	author = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and Haberland, Matt and Reddy, Tyler and Cournapeau, David and Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and Bright, Jonathan and Van Der Walt, Stéfan J. and Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and Kern, Robert and Larson, Eric and Carey, C J and Polat, İlhan and Feng, Yu and Moore, Eric W. and VanderPlas, Jake and Laxalde, Denis and Perktold, Josef and Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and Harris, Charles R. and Archibald, Anne M. and Ribeiro, Antônio H. and Pedregosa, Fabian and Van Mulbregt, Paul and {SciPy 1.0 Contributors} and Vijaykumar, Aditya and Bardelli, Alessandro Pietro and Rothberg, Alex and Hilboll, Andreas and Kloeckner, Andreas and Scopatz, Anthony and Lee, Antony and Rokem, Ariel and Woods, C. Nathan and Fulton, Chad and Masson, Charles and Häggström, Christian and Fitzgerald, Clark and Nicholson, David A. and Hagen, David R. and Pasechnik, Dmitrii V. and Olivetti, Emanuele and Martin, Eric and Wieser, Eric and Silva, Fabrice and Lenders, Felix and Wilhelm, Florian and Young, G. and Price, Gavin A. and Ingold, Gert-Ludwig and Allen, Gregory E. and Lee, Gregory R. and Audren, Hervé and Probst, Irvin and Dietrich, Jörg P. and Silterra, Jacob and Webber, James T and Slavič, Janko and Nothman, Joel and Buchner, Johannes and Kulick, Johannes and Schönberger, Johannes L. and De Miranda Cardoso, José Vinícius and Reimer, Joscha and Harrington, Joseph and Rodríguez, Juan Luis Cano and Nunez-Iglesias, Juan and Kuczynski, Justin and Tritz, Kevin and Thoma, Martin and Newville, Matthew and Kümmerer, Matthias and Bolingbroke, Maximilian and Tartre, Michael and Pak, Mikhail and Smith, Nathaniel J. and Nowaczyk, Nikolai and Shebanov, Nikolay and Pavlyk, Oleksandr and Brodtkorb, Per A. and Lee, Perry and McGibbon, Robert T. and Feldbauer, Roman and Lewis, Sam and Tygier, Sam and Sievert, Scott and Vigna, Sebastiano and Peterson, Stefan and More, Surhud and Pudlik, Tadeusz and Oshima, Takuya and Pingel, Thomas J. and Robitaille, Thomas P. and Spura, Thomas and Jones, Thouis R. and Cera, Tim and Leslie, Tim and Zito, Tiziano and Krauss, Tom and Upadhyay, Utkarsh and Halchenko, Yaroslav O. and Vázquez-Baeza, Yoshiki},
+	month = mar,
+	year = {2020},
+	pages = {261--272},
+}
