--- a/docs/source/PGOP_example.ipynb
+++ b/docs/source/PGOP_example.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## Simple example\n",
     "To begin, let us first consider ideal simple crystals such as SC, BCC, FCC and HCP and\n",
-    "let us attempt to compute their PGOP values."
+    "compute their PGOP values."
    ]
   },
   {
