--- a/docs/source/PGOP_example.ipynb
+++ b/docs/source/PGOP_example.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "source": [
     "## Simple example\n",
-    "To begin, let us first consider ideal simple crystals such as SC, BCC, FCC and HCP and\n",
+    "Let us first consider ideal simple crystals such as SC, BCC, FCC and HCP and\n",
     "compute their PGOP values."
    ]
   },
