--- a/docs/source/PGOP_example.ipynb
+++ b/docs/source/PGOP_example.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "### Example: HCP Crystal\n",
     "\n",
-    "As documented by AFLOW, the HCP structure comprises two unique atomic sites, both designated as Wyckoff position 2c ([AFLOW example](https://aflow.org/p/A_hP2_194_c-001/)) within space group 194. According to the crystallographic tables for this space group ([IUCr Tables for 194](https://onlinelibrary.wiley.com/iucr/itc/Ac/ch2o3v0001/sgtable2o3o194/)), the 2c site exhibits symmetry –$6m2$, which corresponds to $\\mathrm{D_{3h}}$ as noted in [Wikipedia](https://en.wikipedia.org/wiki/Hermann%E2%80%93Mauguin_notation)."
+    "As documented by AFLOW, the HCP structure comprises two unique atomic sites, both designated as Wyckoff position 2c ([AFLOW example](https://aflow.org/p/A_hP2_194_c-001/), space group 194). According to the crystallographic tables for this space group ([IUCr Tables for 194](https://onlinelibrary.wiley.com/iucr/itc/Ac/ch2o3v0001/sgtable2o3o194/)), the 2c site exhibits symmetry –$6m2$, which corresponds to $\\mathrm{D_{3h}}$ as noted in [Wikipedia](https://en.wikipedia.org/wiki/Hermann%E2%80%93Mauguin_notation)."
    ]
   },
   {
