--- a/docs/source/PGOP_example.ipynb
+++ b/docs/source/PGOP_example.ipynb
@@ -239,7 +239,7 @@
     "\n",
     "Now let us analyze the promised nucleation subtrajectory of LJ system. First step is to\n",
     "compute the value of the order parameter for every particle in every frame. This might\n",
-    "take a while."
+    "take up to half an hour for a typical laptop computer."
    ]
   },
   {
