--- a/docs/source/PGOP_example.ipynb
+++ b/docs/source/PGOP_example.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This example demonstrates the application of Point group order parameter (PGOP) to a Lennard-Jones (LJ) system at density of 1 and temperature of 0.8 in reduced units. The trajectory for this analysis was generated using HOOMD-blue and dupin ([HOOMD-blue](https://hoomd-blue.readthedocs.io/), [dupin](https://github.com/glotzerlab/dupin)), which provided a highly time-resolved (every frame is spaced 20 time steps apart) subtrajectory of a rare event—specifically, nucleation in the LJ system. You can read more on this in dupin documentation ([link](https://dupin.readthedocs.io/en/latest/index.html)). Our objective is to analyze this trajectory to evaluate the evolution of symmetry within the environments captured. \n",
+    "This example demonstrates the application of Point Group Order Parameter (PGOP) to a Lennard-Jones (LJ) system. The trajectory for this analysis was generated using HOOMD-blue together with dupin ([HOOMD-blue](https://hoomd-blue.readthedocs.io/), [dupin](https://github.com/glotzerlab/dupin)), producing a highly time-resolved subtrajectory of a rare event, where frames are spaced 20 time steps apart. In this LJ system, the rare event we capture is nucleation. You can read more on this in dupin documentation ([link](https://dupin.readthedocs.io/en/latest/index.html)). Our objective is to analyze the evolution of symmetries within the environments found in this trajectory. \n",
     "\n",
     "### Identifying Relevant Point Groups\n",
     "\n",
