--- a/docs/source/PGOP_example.ipynb
+++ b/docs/source/PGOP_example.ipynb
@@ -237,9 +237,10 @@
    "source": [
     "## LJ nucleation analysis\n",
     "\n",
-    "Now let us analyze the promised nucleation subtrajectory of LJ system. First step is to\n",
-    "compute the value of the order parameter for every particle in every frame. This might\n",
-    "take up to half an hour for a typical laptop computer."
+    "Now let us analyze the promised nucleation subtrajectory of LJ system at the density of\n",
+    "1 and temperature of 0.8 in reduced units. First step is to compute the value of the \n",
+    "order parameter for every particle in every frame. This might take up to half an hour\n",
+    "for a typical laptop computer."
    ]
   },
   {
