--- a/docs/source/ref.bib
+++ b/docs/source/ref.bib
@@ -114,3 +114,13 @@ Cambridge Philosophical Society}, author={Altmann, S. L.}, year={1957}, pages={3
 	year = {2020},
 	pages = {261--272},
 }
+
+@book{bishop1993,
+  title = {Group Theory and Chemistry},
+  author = {Bishop, David M.},
+  year = {1993},
+  publisher = {Dover Publ},
+  address = {New York, NY},
+  isbn = {978-0-486-67355-4},
+  langid = {english}
+}
